--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
       <li><a href="portfolio.html" class="effect">Portfolio</a></li>
       <li id="about"><a href="about.html" class="effect">About</a></li>
     </ul>
+<center>
 
     <div class="twocolumns">
       <img src="https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/s960x960/91786233_3120024008028960_7785564608474906624_o.jpg?_nc_cat=101&_nc_sid=85a577&_nc_oc=AQnuJgvEbjW1fObNwVBfaUJp_Zz4t14RCpiHTHSvEq41EDsslDYLyZkpA8HL_mzN8Mw&_nc_ht=scontent-sjc3-1.xx&_nc_tp=7&oh=685dbabbf26e97af0956df433ef4b553&oe=5EA918C7" id="me">
@@ -31,7 +32,7 @@ body {
   background-attachment: fixed;
   background-size: 100% 100%;
 }
-
+</style>
     <br><br>
 
     <footer class="footer">
