--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <li id="about"><a href="about.html" class="effect">About</a></li>
     </ul>
   </div>
+  <center>
+
   <iframe src="https://player.vimeo.com/video/398098152" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
   <p> 
 <font size="5" color="black"> 
